clean up and sub config

--- a/04_geospatial.ipynb
+++ b/04_geospatial.ipynb
@@ -21,6 +21,27 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "279fdd5c-9957-4280-aed3-c27335324e11",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import mlflow\n",
+    "config = mlflow.models.ModelConfig(development_config='config.yaml')\n",
+    "dbutils.widgets.text('catalog', config.get('catalog'))\n",
+    "dbutils.widgets.text('schema', config.get('schema'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "implicitDf": true,
@@ -36,7 +57,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE FUNCTION workspace.default.stations_within_distance(lat DOUBLE, long DOUBLE, dist DOUBLE)\n",
+    "CREATE OR REPLACE FUNCTION `${catalog}`.`${schema}`.stations_within_distance(lat DOUBLE, long DOUBLE, dist DOUBLE)\n",
     "RETURNS TABLE (\n",
     "  code STRING,\n",
     "  name STRING,\n",
@@ -46,7 +67,7 @@
     ")\n",
     "RETURN\n",
     "SELECT *\n",
-    "FROM workspace.default.stations\n",
+    "FROM `${catalog}`.`${schema}`.stations\n",
     "WHERE st_dwithin(\n",
     "  st_transform(st_geomfromtext(CONCAT('POINT(', longitude, ' ', latitude, ')'), 4326), 32188),\n",
     "  st_transform(st_geomfromtext(CONCAT('POINT(', long, ' ', lat, ')'), 4326), 32188),\n",
@@ -75,7 +96,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "SELECT * FROM workspace.default.stations_within_distance(45.5, -73.5, 10000) LIMIT 10"
+    "SELECT * FROM `${catalog}`.`${schema}`.stations_within_distance(45.5, -73.5, 10000) LIMIT 10"
    ]
   }
  ],
